<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/layoutAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/imageHero"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/marvelplaceholder"
                android:transitionName="hero"
                app:layout_collapseMode="parallax"
                tools:src="@drawable/marvelplaceholder" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentTop="true"
                android:background="@color/transparent"
                app:theme="@style/ToolBarStyle" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollHeroInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutAppBar"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            android:id="@+id/cardHeroe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_size_medium"
            android:elevation="@dimen/cardview_elevation">

            <LinearLayout
                android:id="@+id/layoutHeroInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_padding_size_medium">

                <TextView
                    android:id="@+id/textNameValue"
                    style="@style/TextView.Gray.XXLarge.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_padding_size_medium" />

                <TextView
                    android:id="@+id/textRealName"
                    style="@style/TextView.Gray.XLarge.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_padding_size_medium"
                    android:layout_marginBottom="@dimen/margin_padding_size_small"
                    android:text="@string/hero_detail_real_name" />

                <TextView
                    android:id="@+id/textRealNameValue"
                    style="@style/TextView.Gray.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_padding_size_medium"
                    android:layout_marginBottom="@dimen/margin_padding_size_small"/>

                <TextView
                    android:id="@+id/textHeigh"
                    style="@style/TextView.Gray.XLarge.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_padding_size_medium"
                    android:layout_marginBottom="@dimen/margin_padding_size_small"
                    android:text="@string/hero__detail_heigh" />

                <TextView
                    android:id="@+id/textHeighValue"
                    style="@style/TextView.Gray.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_padding_size_medium"
                    android:layout_marginBottom="@dimen/margin_padding_size_medium" />

                <TextView
                    android:id="@+id/textPower"
                    style="@style/TextView.Gray.XLarge.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_padding_size_medium"
                    android:layout_marginBottom="@dimen/margin_padding_size_small"
                    android:text="@string/hero__detail_power" />

                <TextView
                    android:id="@+id/textPowerValue"
                    style="@style/TextView.Gray.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_padding_size_medium"
                    android:layout_marginBottom="@dimen/margin_padding_size_medium" />

                <TextView
                    android:id="@+id/textAbilities"
                    style="@style/TextView.Gray.XLarge.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_padding_size_medium"
                    android:layout_marginBottom="@dimen/margin_padding_size_small"
                    android:text="@string/hero__detail_abilities" />

                <TextView
                    android:id="@+id/textAbilitiesValue"
                    style="@style/TextView.Gray.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_padding_size_medium"
                    android:layout_marginBottom="@dimen/margin_padding_size_medium" />

                <TextView
                    android:id="@+id/textGroups"
                    style="@style/TextView.Gray.XLarge.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_padding_size_medium"
                    android:layout_marginBottom="@dimen/margin_padding_size_small"
                    android:text="@string/hero__detail_groups" />

                <TextView
                    android:id="@+id/textGroupsValue"
                    style="@style/TextView.Gray.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_padding_size_medium"
                    android:layout_marginBottom="@dimen/margin_padding_size_medium"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>